# yadro-tapes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
configs/: workload.yaml  workloads.yaml
src/: CMakeLists.txt  main.cpp  workloads.yaml
src/algorithms/: algorithm.hpp  algorithms_factory.cpp  algorithms_factory.hpp  block_sort_algorithm.hpp  bubble_sort_algorithm.hpp  copy_algorithm.hpp  merge_sort.hpp  merge_sort_algorithm.hpp  print_algorithm.hpp
src/tapes/: dummy_tape.hpp  file_based_tape.cpp  file_based_tape.hpp  tape.hpp  tape_extends.cpp  tape_extends.hpp  tapes_factory.hpp
src/tapes/workloads/: delaying_workload.hpp  sleeping_workload.hpp
src/utils/: configs.hpp
tests/: CMakeLists.txt  file_based_tape_tests.cpp  output.txt  sorting_tests.cpp
tests/tmp/: 1.txt  2.txt
tmp/: 1.txt
yadro_tapes/: CMakeLists.txt  main.cpp
yadro_tapes/src/algorithms/: algorithm.hpp  algorithms_factory.cpp  algorithms_factory.hpp  bubble_sort_algorithm.hpp  merge_sort_algorithm.hpp
yadro_tapes/src/tapes/: file_based_tape.cpp  file_based_tape.hpp  tape.hpp  tape_extends.cpp  tape_extends.hpp  tapes_factory.cpp
yadro_tapes/src/tapes/workloads/: delaying_workload.hpp  workload.hpp
yadro_tapes/src/utils/: configs.hpp  temp_tape_files.cpp  temp_tape_files.hpp
yadro_tapes_tests/: CMakeLists.txt
yadro_tapes_tests/src/: file_based_tape_tests.cpp  sorting_tests.cpp
yadro_tapes_tests/src/utils/: static_tape_files.cpp  static_tape_files.hpp  tapes.cpp  tapes.hpp
